--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/white-logo.png" />
+    <!-- Updated: Added ID and set default to black-logo.png for light theme -->
+    <link rel="icon" id="favicon" type="image/png" href="/black-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     
     <!-- PWA Meta Tags -->
     <meta name="description" content="Your personal AI tutor for learning and answering questions" />
-    <meta name="theme-color" content="#374151" />
+    <!-- Updated: Added ID and set default color for light theme -->
+    <meta name="theme-color" id="theme-color-meta" content="#F9FAFB" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
